src/styles/components/views/customer/_customer-detail.scss
@import "../../../abstracts/variables";
@import "../../../abstracts/mixins";

.customer-detail-wrapper {
	// width: 1258px;
	// margin: 0 auto;
	// padding: 30px;
	margin-bottom: 22%;
	// margin: 80px auto 60px auto;
	width: 924px;
	.box {
		margin-bottom: 8px;
		padding: 10px;
	}
	.tabs-container .tab-list {
		border-radius: 8px 8px 0 0 !important;
		background-color: #f5f5f5 !important;
	}

	.flexible-height {
		display: flex;
		flex-direction: column;

		.flex-grow {
			flex-grow: 1;
		}
	}
	.wrap-detail-contact {
		display: flex;
		width: 1120px;
		height: 770px;
		justify-content: center;
		align-items: center;
		// margin-top: 75px;
		margin-top: 120px;
		.contact-activities {
			margin-bottom: 34%;
			width: 100%;
			margin-left: -200px;
		}
		.contact-ledger-component {
			margin-left: -7px;
			padding: 20px;
			border: 1px solid #c6c6c6;
			border-radius: 8px !important;
			margin-top: 16px;
			width: 91%;
			background: white;
			.radio {
				display: flex;
				justify-content: space-evenly;
				margin-top: 13px;
			}
			.Select-control {
				margin-left: 8px;
			}
		}
		.contact-overview {
			margin-top: 70px;
		}
	}
	.wrap-colums-detail {
		display: flex;
		align-items: flex-start;
		// margin-left: 16px;
	}

	.button-circle .button {
		background-color: #f6f6f6;
		border-radius: 100%;
		border-color: $color-blue-light;
		color: $color-blue-light;
		font-size: 15px;
		min-width: 40px;
		width: 40px;
		height: 40px;
		padding: 0;
		display: flex;
		margin-top: 5px;

		.icon {
			margin: 0 auto;
			line-height: 40px;
		}
	}

	.border-right {
		border-right: 1px solid $color-text-placeholder;
	}

	.htmlInput_input {
		border-radius: $border-radius-small;
	}

	.customer-metadata {
		text-align: center;
		margin-bottom: 8px;
		border-radius: 10px;
		border: 1px solid var(--grey-dark-c-6-c-6-c-6, #c6c6c6);
		background: var(--font-colors-white-fffffff, #fff);
		height: 33%;

		.customer-avatar {
			margin: 12px auto 20px;
			float: left;
		}

		.customer-detail-metadata-name {
			font-size: 18px;
			font-weight: 600;
			display: initial;

			.text-muted {
				font-size: 14px;
				line-height: 20px;
				font-weight: 400;
			}
		}

		.popover-wrapper {
			margin: 5px 0;
			z-index: 100;
		}

		.popover-container {
			position: relative;
		}

		.buttons {
			display: flex;
			margin: 20px 0 20px;

			.button {
				padding: 0 10px;
				width: 100%;
				display: flex;
				justify-content: center;
				font-size: 13px;
			}

			.button-component-wrapper.button-single {
				flex: 0 0 100%;
			}

			.button-component-wrapper.button-half {
				flex: 0 0 50%;

				&:first-of-type {
					padding-right: 6px;
				}

				&:last-of-type {
					padding-left: 6px;
				}
			}
		}

		.button-more .icon {
			display: inline-block;
			float: none;
			position: relative;
			top: 2px;
		}
	}

	.customer-contact-information {
		.customer-contact-information-scroll-container {
			position: relative;
			max-height: 340px;
			width: 310px;
			height: 295px;
			flex-shrink: 0;
			padding: 10px;
			border-radius: 8px;
			background: var(--highlights-pale-blue-f-1-f-8-fb, #f1f8fb);

			&.ps--active-y {
				margin-right: -22px;

				.button-circle {
					margin-left: 18px;
					margin-top: -15px;
				}
			}

			.button-circle {
				margin-left: 30px;
			}
		}
	}

	.customer-contact-persons {
		width: 100%;
		.carousel_prev {
			left: 0px;
			background: none;
		}

		.carousel_next {
			right: 3px;
			background: none;
		}

		.button-wrapper {
			display: flex;
			justify-content: flex-end;
			padding-right: 0.7rem;
		}

		.button-circle .button {
			font-size: 12px;
			min-width: 30px;
			width: 30px;
			height: 30px;

			.icon {
				line-height: 30px;
			}
		}
	}

	.customer-todos-activities {
		.customer-tabs {
			background: $color-bg-medium;
			border-radius: 8px 8px 0 0;
			height: 39px;
		}

		.customer-tab {
			cursor: pointer;
			font-size: 14px;
			font-weight: 600;
			height: 100%;
			padding: 10px 15px;

			&:first-of-type {
				border-radius: 8px 0 0 0;
			}

			&.active-tab {
				background: $color-white;
				color: $color-primary;
			}
		}

		.customer-tab-content {
			padding: 20px 30px 5px;

			.Select-placeholder,
			.Select-input {
				line-height: 35px;
			}

			.tag-btn-submit {
				padding-top: 9px;
			}
		}
	}

	.customer-sales {
		height: 505px;

		.SVGInline {
			position: absolute;
			margin-top: 4px;
			margin-left: 5px;
		}

		.box-clickable {
			cursor: pointer;
			.balance-field {
				display: flex;
				flex-direction: row;
			}
		}
	}

	.customer-sales-chart {
		.chart {
			height: 280px;
			margin-bottom: 62px;
		}
		.total-revenue {
			display: flex;
			margin-left: 8%;
			width: 137px;
			padding: 16px;
			justify-content: center;
			align-items: center;
			gap: 16px;
			background: var(--highlights-pale-blue-f-1-f-8-fb, #f1f8fb);
		}
	}

	.pagination-component-wrapper .pagination-page {
		border-radius: $border-radius-small;
	}

	.topbar-wrapper {
		.button-fetch-emails:disabled:hover {
			opacity: 1;
		}
	}

	// -----------------------------
	// Customer Document
	// -----------------------------
	.customer-document-wrapper {
		width: 100%;
		// margin-top: -22%;
		margin-bottom: 340px;
		margin-left: -95px;
		height: 596px;
	}

	.customerDocument {
		&_container {
			display: block !important;
		}

		&_list {
			width: 100%;

			.list_row {
				padding-left: 5px;
				padding-right: 5px;

				&-canceled {
					.list_item:nth-child(4) {
						padding-right: 0px;
					}
				}
			}

			.list_info {
				padding-left: 5px;
				padding-right: 6px;
			}
		}
	}

	.selectize-full-width {
		.selectize-dropdown {
			width: 480px !important;
		}
	}

	.selectInput_label {
		width: 100%;
	}

	.customer-document-list-head-content {
		justify-content: space-between;
		align-items: center;
		width: 100%;
		margin-bottom: 20px;

		.filter-component-wrapper {
			margin-left: -18px;
		}
	}

	.filter-component-wrapper .filter-item {
		margin-right: 0;
		margin-left: 10px;
	}

	.list-component .list-table .list-table-cell {
		padding: 20px 10px !important;
	}

	// .list-component {

	// 	tbody {
	// 		.list-table-row {
	// 			&:hover {
	// 				cursor: pointer;
	// 				background: $color-table-hover;

	// 				.cell-selectable {
	// 					border-bottom: 1px solid $color-line-light;
	// 				}
	// 			}
	// 		}
	// 	}

	// }
	// .list-component .list-table .list-table-row{
	// 	padding: 20px 10px !important;
	// }

	.list-component .customer-document-list-pagination {
		text-align: center;
		padding: 10px 0 0 0;
	}

	.customerDocument_container {
		min-height: 400px;
		padding: 20px;
	}

	.customer-document-error {
		display: flex;
		justify-content: center;
		align-items: center;
		flex-direction: column;

		.error-headline {
			margin-bottom: 20px;

			h1 {
				font-weight: 500;
				font-size: 20px;
			}
		}
	}

	.opacityLedger {
		opacity: 0.3;
		pointer-events: none;
		user-select: none;
	}
	.detail-wrap {
		border-radius: 10px;
		border: 1px solid var(--grey-dark-c-6-c-6-c-6, #c6c6c6);
		background: var(--font-colors-white-fffffff, #fff);
	}
	.detail-wrap-revenue {
		border-radius: 10px;
		background: var(--font-colors-white-fffffff, #fff);
	}
	.condition-box {
		border: 1px solid var(--grey-dark-c-6-c-6-c-6, #c6c6c6);
		background: var(--font-colors-white-fffffff, #fff);
	}
	.box-column {
		border-radius: 8px;
		background: var(--highlights-pale-blue-f-1-f-8-fb, #f1f8fb);
	}

	.detail-wrap-column {
		border-radius: 10px;
		// height: 360px;
		border: 1px solid var(--grey-dark-c-6-c-6-c-6, #c6c6c6);
		background: var(--font-colors-white-fffffff, #fff);
	}

	.row-box-col {
		display: flex;
		gap: 15px;
	}

	.box-column {
		flex: 1;
		display: flex;
		width: 137px;
		height: 142px;
		padding: 16px;
		justify-content: center;
		align-items: center;
		gap: 16px;
		flex-shrink: 0;
	}

	.image-container {
		position: relative;
	}

	.overlay-image {
		border-radius: 24px;
		background: var(--green-medium-bef-9-dc, #bef9dc);
		padding: 8px;
	}
	.overlay-image-red {
		border-radius: 24px;
		background: var(--highlights-pale-red-ffdcda, #ffdcda);
		padding: 8px;
	}

	.customer-notes {
		display: flex;
		width: 291px;
		padding: 16px;
		flex-direction: column;
		align-items: flex-start;
		gap: 8px;

		.notes_heading {
			font-size: 1.5rem;
		}

		.notes_content {
			.notes-display-wrapper {
				width: 259px;
				height: 80px;
				flex-shrink: 0;

				.notes_empty {
					color: gray;
				}
			}
		}

		.customer-conditions {
			display: flex;
			width: 291px;
			padding: 16px;
			flex-direction: column;
			align-items: flex-start;
			gap: 8px;

			.customer-conditions.condition-box {
				display: inline-flex;
				padding: 16px;
				align-items: flex-start;
				gap: 32px;
			}
		}
	}
	.total-revenue-box {
		display: flex;
		flex-direction: column;
		align-items: flex-start;
		gap: 8px;
	}
}

.customerDocument_list {
	.loader {
		position: relative;
		margin-top: 20%;
	}
}

